// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
.emotion-0 {
  border-radius: 6px;
}

<InfoBox
  appearance="default"
  className="emotion-0"
  message="message"
  onDismiss={[MockFunction]}
/>
`;

exports[`InfoBox InfoBoxBanner renders default 1`] = `
.emotion-0 {
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

<InfoBox
  appearance="default"
  className="emotion-0"
  message="message"
  onDismiss={[MockFunction]}
/>
`;

exports[`InfoBox renders default 1`] = `
.emotion-1 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

.emotion-2 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-0 {
  padding-bottom: 16px;
}

<div
  aria-live="polite"
  className="emotion-2"
  data-cy="infoBox"
  role="log"
>
  <div
    className="emotion-0"
  >
    message
  </div>
  <Clickable
    action={[Function]}
    disableFocusOutline={false}
    role="button"
    tabIndex={0}
  >
    <span
      className="emotion-1"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="xs"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders with JSX message 1`] = `
.emotion-1 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

.emotion-2 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-0 {
  padding-bottom: 16px;
}

<div
  aria-live="polite"
  className="emotion-2"
  data-cy="infoBox"
  role="log"
>
  <div
    className="emotion-0"
  >
    <MessageComponent />
  </div>
  <Clickable
    action={[Function]}
    disableFocusOutline={false}
    role="button"
    tabIndex={0}
  >
    <span
      className="emotion-1"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="xs"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders with actions 1`] = `
.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-5 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

.emotion-6 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-0 {
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: auto;
  padding-bottom: 16px;
}

.emotion-2 {
  padding-left: 16px;
}

.emotion-1 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-left: 16px;
}

<div
  aria-live="polite"
  className="emotion-6"
  data-cy="infoBox"
  role="log"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-0"
    >
      message
    </div>
    <div
      className="emotion-3"
      data-cy="infoBox-actions"
    >
      <span
        className="emotion-1"
      >
        <Component />
      </span>
      <span
        className="emotion-2"
      >
        <Component />
      </span>
    </div>
  </div>
  <Clickable
    action={[Function]}
    disableFocusOutline={false}
    role="button"
    tabIndex={0}
  >
    <span
      className="emotion-5"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="xs"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders without dismiss button 1`] = `
.emotion-1 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-0 {
  padding-bottom: 16px;
}

<div
  aria-live="polite"
  className="emotion-1"
  data-cy="infoBox"
  role="log"
>
  <div
    className="emotion-0"
  >
    message
  </div>
</div>
`;
